# Changelog

All notable changes to this project will be documented in this file.

The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).


# 2020-03-16 - SK - v.1.2.2
             - SL - v.1.1.1
             - NL - v.1.1.0
             - IT - v.2.9.6
### Changed
- Replaced object UIWebView with WKWebView for deprecated usage by Apple Store
- Updated translation text for "btn_open" button during reservation activity on CarBookingPopupView (#915)

## 2020-03-23 - IT - v.2.9.5
### Changed
- Updated lbl_supportSubtitle value (#952)

## 2020-03-13 - SK - v.1.2.1
### Changed
- Updated legalNote endpoint (#941)

## 2020-03-03 - SK - v.1.2.0
              - SL - v.1.1.0
              - NL - v.1.0.9
              - IT - v.2.9.4
### Changed
- Bugfix for app crash on update car popup (#882)

## 2020-02-17 - IT - v.2.9.3
### Changed
- Added SOS button on Support Area (#734)

## 2020-02-13 - SK - v.1.1.9
              - SL - v.1.0.9
              - NL - v.1.0.8
### Changed
- Fixed user area problem passing language to endpoints (#816)

## 2020-02-11 - SK - v.1.1.8
### Changed
- Incorrect mail address in support area (#780)
- Fixed zoom map (#784)
- Fixed language selection (#787)

## 2020-01-28 - SL - v.1.0.8
### Changed
- Fixed Slovenian language selection (#690)

## 2020-01-10 - NL - v.1.0.7
### Changed
- Updated translation for invalid_driver_license_login_alert (#605)

## 2020-01-02 - SK - v.1.1.7
              - SL - v.1.0.6
              - NL - v.1.0.6
### Changed
- Google Maps APIkey bug fix (#510)
- Updated disableReason_EndPoint for SK and SL

## 2020-01-02 - SK - v.1.1.6
### Changed
- Incorrect minutes indication key (#496)

## 2019-12-23 - NL - v.1.0.5
### Changed
- Fix GoogleMaps API key (#519)

## 2019-12-23 - SK - v.1.1.5
### Changed
- Fix GoogleMaps API key (#515)

## 2019-12-23 - SL - v.1.0.6
### Changed
- Fix GoogleMaps API key (#510)
