@@ -5,6 +5,9 @@ All notable changes to this project will be documented in this file.
 The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
 and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).
 
+## 2020-04-29 - IT - v.2.9.6
+### Changed
+- Activated MySharengo popup message
 
 # 2020-03-16 - SK - v.1.2.2
              - SL - v.1.1.1
